Fix padding on small screen

--- a/themes/asi/assets/css/main.css
+++ b/themes/asi/assets/css/main.css
@@ -2,11 +2,12 @@ body {
     color: #222;
     font-family: sans-serif;
     line-height: 1.5;
-    margin: 1rem auto;
     max-width: 768px;
     min-height: calc(100vh - 2rem);
     display: grid;
     grid-template-rows: auto 1fr auto;
+    margin: 0 auto;
+    padding: 0 1rem;
 }
 
 header {
